Also fixed some of the common bugs like gap between instructor section and TC and language name display in navbar

--- a/src/components/Main_section/Instructors/Instructors.styles.scss
+++ b/src/components/Main_section/Instructors/Instructors.styles.scss
@@ -48,7 +48,7 @@
             background-position: -50px 0px;
             .square1{
                 z-index: -1;
-                position: relative;
+                position: absolute;
                 margin-top: -15%;
                 margin-left: 35%;
                 width: 75%;
